Fix spacing on Member Groups page

--- a/app/assets/stylesheets/member_groups.css.scss
+++ b/app/assets/stylesheets/member_groups.css.scss
@@ -2,7 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.member-group-photo {
-  width: 300px;
-  height: 450px;
+.member-group-row {
+  margin-bottom: 20px;
+}
+
+img.member-group-photo {
+  width: 285px;
+  height: 425px;
+}
+
+.top-column-header {
+  margin-top: 0;
+}
+
+.top-column-header, .column-header {
+  margin-bottom: 5px;
 }
